--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <div class="hero-overlay"></div>
       <div class="container hero-content">
         <div class="hero-image">
-          <img src="c:\Users\acer\Desktop\IMG-20251214-WA0268.jpg" alt="RAJAN RAMYA" class="profile-pic" />
+          <img src="C:\Users\acer\Documents\GitHub\RajanRamya.GWU-BHBT-2022-12\Image\ram.jpg" alt="RAJAN RAMYA" class="profile-pic" />
         </div>
         <div class="hero-text">
           <h1>Hi, I’m RAJAN RAMYA</h1>
@@ -314,11 +314,6 @@
 
     <section id="contact" class="container contact fade-in">
       <h2>Contact</h2>
-      <div class="contact-details">
-        <p><i class="fas fa-envelope"></i> Email: <a href="mailto:rajanramyaramya@gmail.com">rajanramyaramya@gmail.com</a></p>
-        <p><i class="fas fa-phone"></i> Phone: 0778565697</p>
-        <p><i class="fas fa-map-marker-alt"></i> Location: Kandy, Sri Lanka</p>
-      </div>
       <form id="contact-form">
         <label>
           Email
@@ -335,6 +330,11 @@
 
   <footer class="site-footer">
     <div class="container">
+      <div class="contact-details">
+        <p><i class="fas fa-envelope"></i> Email: <a href="mailto:rajanramyaramya@gmail.com">rajanramyaramya@gmail.com</a></p>
+        <p><i class="fas fa-phone"></i> Phone: 0778565697</p>
+        <p><i class="fas fa-map-marker-alt"></i> Location: Kandy, Sri Lanka</p>
+      </div>
       <small>© RAJAN RAMYA — Built with ❤️</small>
     </div>
   </footer>
