--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div class="hero-overlay"></div>
       <div class="container hero-content">
         <div class="hero-image">
-          <img src="https://imgur.com/J3N6JCC" alt="RAJAN RAMYA" class="profile-pic" />
+          <img src="https://i.imgur.com/J3N6JCC.jpg" alt="RAJAN RAMYA" class="profile-pic" />
         </div>
         <div class="hero-text">
           <h1>Hi, I’m RAJAN RAMYA</h1>
