--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <a href="#skills">Skills</a>
         <a href="#projects">Projects</a>
         <a href="#contact">Contact</a>
-        <a href="cv.pdf" download>CV</a>
+        <a href="cv.html" target="_blank">CV</a>
       </nav>
     </div>
   </header>
@@ -78,7 +78,7 @@
           <p id="tagline" class="tagline">Passionate learner, future professional in Biomedical Technology.</p>
           <div class="hero-buttons">
             <a class="btn primary" href="#profile">View Profile</a>
-            <a class="btn secondary" href="cv.pdf" download>Download CV</a>
+            <a class="btn secondary" href="cv.html" target="_blank">View CV</a>
           </div>
         </div>
       </div>
