--- a/cv.html
+++ b/cv.html
@@ -35,6 +35,18 @@
             padding-bottom: 20px;
             margin-bottom: 30px;
         }
+        .header-content {
+            display: flex;
+            align-items: center;
+            gap: 20px;
+        }
+        .profile-img {
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+            object-fit: cover;
+            border: 3px solid var(--accent-color);
+        }
         .header-text h1 {
             margin: 0;
             color: var(--primary-color);
@@ -133,6 +145,26 @@
             body { margin: 0; padding: 15mm; box-shadow: none; }
             a { text-decoration: none; color: inherit; }
         }
+        @media screen and (max-width: 768px) {
+            body {
+                padding: 20px;
+                width: 100%;
+            }
+            .header {
+                flex-direction: column;
+                text-align: center;
+                gap: 20px;
+            }
+            .header-content {
+                flex-direction: column;
+            }
+            .contact-info {
+                text-align: center;
+            }
+            .skills-grid {
+                grid-template-columns: 1fr;
+            }
+        }
     </style>
 </head>
 <body>
@@ -141,9 +173,12 @@
     </button>
 
     <header class="header">
-        <div class="header-text">
-            <h1>Rajan Ramya</h1>
-            <h2>Biomedical Technology Student</h2>
+        <div class="header-content">
+            <img src="https://i.imgur.com/J3N6JCC.jpg" alt="Rajan Ramya" class="profile-img">
+            <div class="header-text">
+                <h1>Rajan Ramya</h1>
+                <h2>Biomedical Technology Student</h2>
+            </div>
         </div>
         <div class="contact-info">
             <p><a href="mailto:rajanramyaramya@gmail.com">rajanramyaramya@gmail.com</a> <i class="fas fa-envelope"></i></p>
